y.output

state 0
	$accept: .manifest $end 

	TAG_EXTM3U  shift 4
	TAG_EXT_X_VERSION  shift 5
	TAG_EXT_X_INDEPENDENT_SEGMENTS  shift 7
	TAG_EXT_X_MEDIA  shift 8
	TAG_EXT_X_STREAM_INF  shift 6
	TAG_EXT_X_TARGETDURATION  shift 9
	TAG_EXT_X_SERVER_CONTROL  shift 10
	TAG_EXT_X_PART_INF  shift 11
	TAG_EXT_X_MEDIA_SEQUENCE  shift 12
	TAG_EXT_X_SKIP  shift 13
	TAG_EXTINF  shift 14
	TAG_EXT_X_PROGRAM_DATE_TIME  shift 15
	TAG_EXT_X_PART  shift 16
	TAG_EXT_X_PRELOAD_HINT  shift 17
	TAG_EXT_X_RENDITION_REPORT  shift 18
	TAG_EXT_X_MAP  shift 19
	.  error

	entry  goto 3
	entries  goto 2
	manifest  goto 1

state 1
	$accept:  manifest.$end 

	$end  accept
	.  error


state 2
	manifest:  entries.    (1)
	entries:  entries.entry 

	TAG_EXTM3U  shift 4
	TAG_EXT_X_VERSION  shift 5
	TAG_EXT_X_INDEPENDENT_SEGMENTS  shift 7
	TAG_EXT_X_MEDIA  shift 8
	TAG_EXT_X_STREAM_INF  shift 6
	TAG_EXT_X_TARGETDURATION  shift 9
	TAG_EXT_X_SERVER_CONTROL  shift 10
	TAG_EXT_X_PART_INF  shift 11
	TAG_EXT_X_MEDIA_SEQUENCE  shift 12
	TAG_EXT_X_SKIP  shift 13
	TAG_EXTINF  shift 14
	TAG_EXT_X_PROGRAM_DATE_TIME  shift 15
	TAG_EXT_X_PART  shift 16
	TAG_EXT_X_PRELOAD_HINT  shift 17
	TAG_EXT_X_RENDITION_REPORT  shift 18
	TAG_EXT_X_MAP  shift 19
	.  reduce 1 (src line 121)

	entry  goto 20

state 3
	entries:  entry.    (2)

	.  reduce 2 (src line 123)


state 4
	entry:  TAG_EXTM3U.    (4)

	.  reduce 4 (src line 126)


state 5
	entry:  TAG_EXT_X_VERSION.INTEGERVAL 

	INTEGERVAL  shift 21
	.  error


state 6
	entry:  TAG_EXT_X_STREAM_INF.ATTRLIST SECONDLINEVALUE 

	ATTR_BANDWIDTH  shift 26
	ATTR_AVERAGE_BANDWIDTH  shift 27
	ATTR_RESOLUTION  shift 28
	ATTR_FRAME_RATE  shift 29
	ATTR_CODECS  shift 30
	ATTR_AUDIO  shift 31
	ATTR_TYPE  shift 32
	ATTR_GROUP_ID  shift 33
	ATTR_NAME  shift 34
	ATTR_DEFAULT  shift 35
	ATTR_AUTOSELECT  shift 36
	ATTR_LANGUAGE  shift 37
	ATTR_CHANNELS  shift 38
	ATTR_URI  shift 39
	ATTR_CAN_BLOCK_RELOAD  shift 40
	ATTR_CAN_SKIP_UNTIL  shift 41
	ATTR_PART_HOLD_BACK  shift 42
	ATTR_PART_TARGET  shift 43
	ATTR_SKIPPED_SEGMENTS  shift 44
	ATTR_DURATION  shift 45
	ATTR_INDEPENDENT  shift 46
	ATTR_LAST_MSN  shift 47
	ATTR_LAST_PART  shift 48
	ATTRKEY  shift 25
	.  error

	ATTRTOKEN  goto 24
	ATTRLIST  goto 22
	ATTRANDVAL  goto 23

state 7
	entry:  TAG_EXT_X_INDEPENDENT_SEGMENTS.    (7)

	.  reduce 7 (src line 129)


state 8
	entry:  TAG_EXT_X_MEDIA.ATTRLIST 

	ATTR_BANDWIDTH  shift 26
	ATTR_AVERAGE_BANDWIDTH  shift 27
	ATTR_RESOLUTION  shift 28
	ATTR_FRAME_RATE  shift 29
	ATTR_CODECS  shift 30
	ATTR_AUDIO  shift 31
	ATTR_TYPE  shift 32
	ATTR_GROUP_ID  shift 33
	ATTR_NAME  shift 34
	ATTR_DEFAULT  shift 35
	ATTR_AUTOSELECT  shift 36
	ATTR_LANGUAGE  shift 37
	ATTR_CHANNELS  shift 38
	ATTR_URI  shift 39
	ATTR_CAN_BLOCK_RELOAD  shift 40
	ATTR_CAN_SKIP_UNTIL  shift 41
	ATTR_PART_HOLD_BACK  shift 42
	ATTR_PART_TARGET  shift 43
	ATTR_SKIPPED_SEGMENTS  shift 44
	ATTR_DURATION  shift 45
	ATTR_INDEPENDENT  shift 46
	ATTR_LAST_MSN  shift 47
	ATTR_LAST_PART  shift 48
	ATTRKEY  shift 25
	.  error

	ATTRTOKEN  goto 24
	ATTRLIST  goto 49
	ATTRANDVAL  goto 23

state 9
	entry:  TAG_EXT_X_TARGETDURATION.INTEGERVAL 

	INTEGERVAL  shift 50
	.  error


state 10
	entry:  TAG_EXT_X_SERVER_CONTROL.ATTRLIST 

	ATTR_BANDWIDTH  shift 26
	ATTR_AVERAGE_BANDWIDTH  shift 27
	ATTR_RESOLUTION  shift 28
	ATTR_FRAME_RATE  shift 29
	ATTR_CODECS  shift 30
	ATTR_AUDIO  shift 31
	ATTR_TYPE  shift 32
	ATTR_GROUP_ID  shift 33
	ATTR_NAME  shift 34
	ATTR_DEFAULT  shift 35
	ATTR_AUTOSELECT  shift 36
	ATTR_LANGUAGE  shift 37
	ATTR_CHANNELS  shift 38
	ATTR_URI  shift 39
	ATTR_CAN_BLOCK_RELOAD  shift 40
	ATTR_CAN_SKIP_UNTIL  shift 41
	ATTR_PART_HOLD_BACK  shift 42
	ATTR_PART_TARGET  shift 43
	ATTR_SKIPPED_SEGMENTS  shift 44
	ATTR_DURATION  shift 45
	ATTR_INDEPENDENT  shift 46
	ATTR_LAST_MSN  shift 47
	ATTR_LAST_PART  shift 48
	ATTRKEY  shift 25
	.  error

	ATTRTOKEN  goto 24
	ATTRLIST  goto 51
	ATTRANDVAL  goto 23

state 11
	entry:  TAG_EXT_X_PART_INF.ATTRLIST 

	ATTR_BANDWIDTH  shift 26
	ATTR_AVERAGE_BANDWIDTH  shift 27
	ATTR_RESOLUTION  shift 28
	ATTR_FRAME_RATE  shift 29
	ATTR_CODECS  shift 30
	ATTR_AUDIO  shift 31
	ATTR_TYPE  shift 32
	ATTR_GROUP_ID  shift 33
	ATTR_NAME  shift 34
	ATTR_DEFAULT  shift 35
	ATTR_AUTOSELECT  shift 36
	ATTR_LANGUAGE  shift 37
	ATTR_CHANNELS  shift 38
	ATTR_URI  shift 39
	ATTR_CAN_BLOCK_RELOAD  shift 40
	ATTR_CAN_SKIP_UNTIL  shift 41
	ATTR_PART_HOLD_BACK  shift 42
	ATTR_PART_TARGET  shift 43
	ATTR_SKIPPED_SEGMENTS  shift 44
	ATTR_DURATION  shift 45
	ATTR_INDEPENDENT  shift 46
	ATTR_LAST_MSN  shift 47
	ATTR_LAST_PART  shift 48
	ATTRKEY  shift 25
	.  error

	ATTRTOKEN  goto 24
	ATTRLIST  goto 52
	ATTRANDVAL  goto 23

state 12
	entry:  TAG_EXT_X_MEDIA_SEQUENCE.INTEGERVAL 

	INTEGERVAL  shift 53
	.  error


state 13
	entry:  TAG_EXT_X_SKIP.ATTRLIST 

	ATTR_BANDWIDTH  shift 26
	ATTR_AVERAGE_BANDWIDTH  shift 27
	ATTR_RESOLUTION  shift 28
	ATTR_FRAME_RATE  shift 29
	ATTR_CODECS  shift 30
	ATTR_AUDIO  shift 31
	ATTR_TYPE  shift 32
	ATTR_GROUP_ID  shift 33
	ATTR_NAME  shift 34
	ATTR_DEFAULT  shift 35
	ATTR_AUTOSELECT  shift 36
	ATTR_LANGUAGE  shift 37
	ATTR_CHANNELS  shift 38
	ATTR_URI  shift 39
	ATTR_CAN_BLOCK_RELOAD  shift 40
	ATTR_CAN_SKIP_UNTIL  shift 41
	ATTR_PART_HOLD_BACK  shift 42
	ATTR_PART_TARGET  shift 43
	ATTR_SKIPPED_SEGMENTS  shift 44
	ATTR_DURATION  shift 45
	ATTR_INDEPENDENT  shift 46
	ATTR_LAST_MSN  shift 47
	ATTR_LAST_PART  shift 48
	ATTRKEY  shift 25
	.  error

	ATTRTOKEN  goto 24
	ATTRLIST  goto 54
	ATTRANDVAL  goto 23

state 14
	entry:  TAG_EXTINF.FLOATVAL COMMA SECONDLINEVALUE 
	entry:  TAG_EXTINF.INTEGERVAL COMMA SECONDLINEVALUE 

	INTEGERVAL  shift 56
	FLOATVAL  shift 55
	.  error


state 15
	entry:  TAG_EXT_X_PROGRAM_DATE_TIME.TIMEVAL 

	TIMEVAL  shift 57
	.  error


state 16
	entry:  TAG_EXT_X_PART.ATTRLIST 

	ATTR_BANDWIDTH  shift 26
	ATTR_AVERAGE_BANDWIDTH  shift 27
	ATTR_RESOLUTION  shift 28
	ATTR_FRAME_RATE  shift 29
	ATTR_CODECS  shift 30
	ATTR_AUDIO  shift 31
	ATTR_TYPE  shift 32
	ATTR_GROUP_ID  shift 33
	ATTR_NAME  shift 34
	ATTR_DEFAULT  shift 35
	ATTR_AUTOSELECT  shift 36
	ATTR_LANGUAGE  shift 37
	ATTR_CHANNELS  shift 38
	ATTR_URI  shift 39
	ATTR_CAN_BLOCK_RELOAD  shift 40
	ATTR_CAN_SKIP_UNTIL  shift 41
	ATTR_PART_HOLD_BACK  shift 42
	ATTR_PART_TARGET  shift 43
	ATTR_SKIPPED_SEGMENTS  shift 44
	ATTR_DURATION  shift 45
	ATTR_INDEPENDENT  shift 46
	ATTR_LAST_MSN  shift 47
	ATTR_LAST_PART  shift 48
	ATTRKEY  shift 25
	.  error

	ATTRTOKEN  goto 24
	ATTRLIST  goto 58
	ATTRANDVAL  goto 23

state 17
	entry:  TAG_EXT_X_PRELOAD_HINT.ATTRLIST 

	ATTR_BANDWIDTH  shift 26
	ATTR_AVERAGE_BANDWIDTH  shift 27
	ATTR_RESOLUTION  shift 28
	ATTR_FRAME_RATE  shift 29
	ATTR_CODECS  shift 30
	ATTR_AUDIO  shift 31
	ATTR_TYPE  shift 32
	ATTR_GROUP_ID  shift 33
	ATTR_NAME  shift 34
	ATTR_DEFAULT  shift 35
	ATTR_AUTOSELECT  shift 36
	ATTR_LANGUAGE  shift 37
	ATTR_CHANNELS  shift 38
	ATTR_URI  shift 39
	ATTR_CAN_BLOCK_RELOAD  shift 40
	ATTR_CAN_SKIP_UNTIL  shift 41
	ATTR_PART_HOLD_BACK  shift 42
	ATTR_PART_TARGET  shift 43
	ATTR_SKIPPED_SEGMENTS  shift 44
	ATTR_DURATION  shift 45
	ATTR_INDEPENDENT  shift 46
	ATTR_LAST_MSN  shift 47
	ATTR_LAST_PART  shift 48
	ATTRKEY  shift 25
	.  error

	ATTRTOKEN  goto 24
	ATTRLIST  goto 59
	ATTRANDVAL  goto 23

state 18
	entry:  TAG_EXT_X_RENDITION_REPORT.ATTRLIST 

	ATTR_BANDWIDTH  shift 26
	ATTR_AVERAGE_BANDWIDTH  shift 27
	ATTR_RESOLUTION  shift 28
	ATTR_FRAME_RATE  shift 29
	ATTR_CODECS  shift 30
	ATTR_AUDIO  shift 31
	ATTR_TYPE  shift 32
	ATTR_GROUP_ID  shift 33
	ATTR_NAME  shift 34
	ATTR_DEFAULT  shift 35
	ATTR_AUTOSELECT  shift 36
	ATTR_LANGUAGE  shift 37
	ATTR_CHANNELS  shift 38
	ATTR_URI  shift 39
	ATTR_CAN_BLOCK_RELOAD  shift 40
	ATTR_CAN_SKIP_UNTIL  shift 41
	ATTR_PART_HOLD_BACK  shift 42
	ATTR_PART_TARGET  shift 43
	ATTR_SKIPPED_SEGMENTS  shift 44
	ATTR_DURATION  shift 45
	ATTR_INDEPENDENT  shift 46
	ATTR_LAST_MSN  shift 47
	ATTR_LAST_PART  shift 48
	ATTRKEY  shift 25
	.  error

	ATTRTOKEN  goto 24
	ATTRLIST  goto 60
	ATTRANDVAL  goto 23

state 19
	entry:  TAG_EXT_X_MAP.ATTRLIST 

	ATTR_BANDWIDTH  shift 26
	ATTR_AVERAGE_BANDWIDTH  shift 27
	ATTR_RESOLUTION  shift 28
	ATTR_FRAME_RATE  shift 29
	ATTR_CODECS  shift 30
	ATTR_AUDIO  shift 31
	ATTR_TYPE  shift 32
	ATTR_GROUP_ID  shift 33
	ATTR_NAME  shift 34
	ATTR_DEFAULT  shift 35
	ATTR_AUTOSELECT  shift 36
	ATTR_LANGUAGE  shift 37
	ATTR_CHANNELS  shift 38
	ATTR_URI  shift 39
	ATTR_CAN_BLOCK_RELOAD  shift 40
	ATTR_CAN_SKIP_UNTIL  shift 41
	ATTR_PART_HOLD_BACK  shift 42
	ATTR_PART_TARGET  shift 43
	ATTR_SKIPPED_SEGMENTS  shift 44
	ATTR_DURATION  shift 45
	ATTR_INDEPENDENT  shift 46
	ATTR_LAST_MSN  shift 47
	ATTR_LAST_PART  shift 48
	ATTRKEY  shift 25
	.  error

	ATTRTOKEN  goto 24
	ATTRLIST  goto 61
	ATTRANDVAL  goto 23

state 20
	entries:  entries entry.    (3)

	.  reduce 3 (src line 124)


state 21
	entry:  TAG_EXT_X_VERSION INTEGERVAL.    (5)

	.  reduce 5 (src line 127)


state 22
	entry:  TAG_EXT_X_STREAM_INF ATTRLIST.SECONDLINEVALUE 
	ATTRLIST:  ATTRLIST.COMMA ATTRANDVAL 

	COMMA  shift 63
	SECONDLINEVALUE  shift 62
	.  error


state 23
	ATTRLIST:  ATTRANDVAL.    (21)

	.  reduce 21 (src line 144)


state 24
	ATTRANDVAL:  ATTRTOKEN.VALUE 

	INTEGERVAL  shift 65
	FLOATVAL  shift 66
	STRINGVAL  shift 67
	RESOLUTIONVAL  shift 68
	TIMEVAL  shift 69
	.  error

	VALUE  goto 64

state 25
	ATTRANDVAL:  ATTRKEY.VALUE 

	INTEGERVAL  shift 65
	FLOATVAL  shift 66
	STRINGVAL  shift 67
	RESOLUTIONVAL  shift 68
	TIMEVAL  shift 69
	.  error

	VALUE  goto 70

state 26
	ATTRTOKEN:  ATTR_BANDWIDTH.    (25)

	.  reduce 25 (src line 150)


state 27
	ATTRTOKEN:  ATTR_AVERAGE_BANDWIDTH.    (26)

	.  reduce 26 (src line 151)


state 28
	ATTRTOKEN:  ATTR_RESOLUTION.    (27)

	.  reduce 27 (src line 152)


state 29
	ATTRTOKEN:  ATTR_FRAME_RATE.    (28)

	.  reduce 28 (src line 153)


state 30
	ATTRTOKEN:  ATTR_CODECS.    (29)

	.  reduce 29 (src line 154)


state 31
	ATTRTOKEN:  ATTR_AUDIO.    (30)

	.  reduce 30 (src line 155)


state 32
	ATTRTOKEN:  ATTR_TYPE.    (31)

	.  reduce 31 (src line 156)


state 33
	ATTRTOKEN:  ATTR_GROUP_ID.    (32)

	.  reduce 32 (src line 157)


state 34
	ATTRTOKEN:  ATTR_NAME.    (33)

	.  reduce 33 (src line 158)


state 35
	ATTRTOKEN:  ATTR_DEFAULT.    (34)

	.  reduce 34 (src line 159)


state 36
	ATTRTOKEN:  ATTR_AUTOSELECT.    (35)

	.  reduce 35 (src line 160)


state 37
	ATTRTOKEN:  ATTR_LANGUAGE.    (36)

	.  reduce 36 (src line 161)


state 38
	ATTRTOKEN:  ATTR_CHANNELS.    (37)

	.  reduce 37 (src line 162)


state 39
	ATTRTOKEN:  ATTR_URI.    (38)

	.  reduce 38 (src line 163)


state 40
	ATTRTOKEN:  ATTR_CAN_BLOCK_RELOAD.    (39)

	.  reduce 39 (src line 164)


state 41
	ATTRTOKEN:  ATTR_CAN_SKIP_UNTIL.    (40)

	.  reduce 40 (src line 165)


state 42
	ATTRTOKEN:  ATTR_PART_HOLD_BACK.    (41)

	.  reduce 41 (src line 166)


state 43
	ATTRTOKEN:  ATTR_PART_TARGET.    (42)

	.  reduce 42 (src line 167)


state 44
	ATTRTOKEN:  ATTR_SKIPPED_SEGMENTS.    (43)

	.  reduce 43 (src line 168)


state 45
	ATTRTOKEN:  ATTR_DURATION.    (44)

	.  reduce 44 (src line 169)


state 46
	ATTRTOKEN:  ATTR_INDEPENDENT.    (45)

	.  reduce 45 (src line 170)


state 47
	ATTRTOKEN:  ATTR_LAST_MSN.    (46)

	.  reduce 46 (src line 171)


state 48
	ATTRTOKEN:  ATTR_LAST_PART.    (47)

	.  reduce 47 (src line 172)


state 49
	entry:  TAG_EXT_X_MEDIA ATTRLIST.    (8)
	ATTRLIST:  ATTRLIST.COMMA ATTRANDVAL 

	COMMA  shift 63
	.  reduce 8 (src line 130)


state 50
	entry:  TAG_EXT_X_TARGETDURATION INTEGERVAL.    (9)

	.  reduce 9 (src line 131)


state 51
	entry:  TAG_EXT_X_SERVER_CONTROL ATTRLIST.    (10)
	ATTRLIST:  ATTRLIST.COMMA ATTRANDVAL 

	COMMA  shift 63
	.  reduce 10 (src line 132)


state 52
	entry:  TAG_EXT_X_PART_INF ATTRLIST.    (11)
	ATTRLIST:  ATTRLIST.COMMA ATTRANDVAL 

	COMMA  shift 63
	.  reduce 11 (src line 133)


state 53
	entry:  TAG_EXT_X_MEDIA_SEQUENCE INTEGERVAL.    (12)

	.  reduce 12 (src line 134)


state 54
	entry:  TAG_EXT_X_SKIP ATTRLIST.    (13)
	ATTRLIST:  ATTRLIST.COMMA ATTRANDVAL 

	COMMA  shift 63
	.  reduce 13 (src line 135)


state 55
	entry:  TAG_EXTINF FLOATVAL.COMMA SECONDLINEVALUE 

	COMMA  shift 71
	.  error


state 56
	entry:  TAG_EXTINF INTEGERVAL.COMMA SECONDLINEVALUE 

	COMMA  shift 72
	.  error


state 57
	entry:  TAG_EXT_X_PROGRAM_DATE_TIME TIMEVAL.    (16)

	.  reduce 16 (src line 138)


state 58
	entry:  TAG_EXT_X_PART ATTRLIST.    (17)
	ATTRLIST:  ATTRLIST.COMMA ATTRANDVAL 

	COMMA  shift 63
	.  reduce 17 (src line 139)


state 59
	entry:  TAG_EXT_X_PRELOAD_HINT ATTRLIST.    (18)
	ATTRLIST:  ATTRLIST.COMMA ATTRANDVAL 

	COMMA  shift 63
	.  reduce 18 (src line 140)


state 60
	entry:  TAG_EXT_X_RENDITION_REPORT ATTRLIST.    (19)
	ATTRLIST:  ATTRLIST.COMMA ATTRANDVAL 

	COMMA  shift 63
	.  reduce 19 (src line 141)


state 61
	entry:  TAG_EXT_X_MAP ATTRLIST.    (20)
	ATTRLIST:  ATTRLIST.COMMA ATTRANDVAL 

	COMMA  shift 63
	.  reduce 20 (src line 142)


state 62
	entry:  TAG_EXT_X_STREAM_INF ATTRLIST SECONDLINEVALUE.    (6)

	.  reduce 6 (src line 128)


state 63
	ATTRLIST:  ATTRLIST COMMA.ATTRANDVAL 

	ATTR_BANDWIDTH  shift 26
	ATTR_AVERAGE_BANDWIDTH  shift 27
	ATTR_RESOLUTION  shift 28
	ATTR_FRAME_RATE  shift 29
	ATTR_CODECS  shift 30
	ATTR_AUDIO  shift 31
	ATTR_TYPE  shift 32
	ATTR_GROUP_ID  shift 33
	ATTR_NAME  shift 34
	ATTR_DEFAULT  shift 35
	ATTR_AUTOSELECT  shift 36
	ATTR_LANGUAGE  shift 37
	ATTR_CHANNELS  shift 38
	ATTR_URI  shift 39
	ATTR_CAN_BLOCK_RELOAD  shift 40
	ATTR_CAN_SKIP_UNTIL  shift 41
	ATTR_PART_HOLD_BACK  shift 42
	ATTR_PART_TARGET  shift 43
	ATTR_SKIPPED_SEGMENTS  shift 44
	ATTR_DURATION  shift 45
	ATTR_INDEPENDENT  shift 46
	ATTR_LAST_MSN  shift 47
	ATTR_LAST_PART  shift 48
	ATTRKEY  shift 25
	.  error

	ATTRTOKEN  goto 24
	ATTRANDVAL  goto 73

state 64
	ATTRANDVAL:  ATTRTOKEN VALUE.    (23)

	.  reduce 23 (src line 147)


state 65
	VALUE:  INTEGERVAL.    (48)

	.  reduce 48 (src line 174)


state 66
	VALUE:  FLOATVAL.    (49)

	.  reduce 49 (src line 175)


state 67
	VALUE:  STRINGVAL.    (50)

	.  reduce 50 (src line 176)


state 68
	VALUE:  RESOLUTIONVAL.    (51)

	.  reduce 51 (src line 177)


state 69
	VALUE:  TIMEVAL.    (52)

	.  reduce 52 (src line 178)


state 70
	ATTRANDVAL:  ATTRKEY VALUE.    (24)

	.  reduce 24 (src line 148)


state 71
	entry:  TAG_EXTINF FLOATVAL COMMA.SECONDLINEVALUE 

	SECONDLINEVALUE  shift 74
	.  error


state 72
	entry:  TAG_EXTINF INTEGERVAL COMMA.SECONDLINEVALUE 

	SECONDLINEVALUE  shift 75
	.  error


state 73
	ATTRLIST:  ATTRLIST COMMA ATTRANDVAL.    (22)

	.  reduce 22 (src line 145)


state 74
	entry:  TAG_EXTINF FLOATVAL COMMA SECONDLINEVALUE.    (14)

	.  reduce 14 (src line 136)


state 75
	entry:  TAG_EXTINF INTEGERVAL COMMA SECONDLINEVALUE.    (15)

	.  reduce 15 (src line 137)


53 terminals, 8 nonterminals
53 grammar rules, 76/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
57 working sets used
memory: parser 40/240000
0 extra closures
302 shift entries, 1 exceptions
18 goto entries
17 entries saved by goto default
Optimizer space used: output 89/240000
89 table entries, 13 zero
maximum spread: 53, maximum offset: 63
